JumpScript/tests/baselines/reference/objectBindingPatternKeywordIdentifiers02.errors.txt
tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers02.jump(1,14): error TS1003: Identifier expected.
tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers02.jump(1,20): error TS1005: ':' expected.


==== tests/cases/conformance/es6/destructuring/objectBindingPatternKeywordIdentifiers02.jump (2 errors) ====
    var { while: while } = { while: 1 }
                 ~~~~~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS1005: ':' expected.